syntax = "proto3";
package gateway.gloo.solo.io;
option go_package = "github.com/solo-io/gloo/projects/gateway2/pkg/api/gateway.gloo.solo.io/v1alpha1";

import "extproto/ext.proto";
option (extproto.equal_all) = true;
option (extproto.hash_all) = true;

import "google/protobuf/wrappers.proto";

// Configuration for the Envoy proxy instance that is provisioned from a
// Kubernetes Gateway.
message EnvoyBootstrap {
  // xDS server configuration.
  XdsServer xds_server = 1;
}

message XdsServer {
  // Address of xDS server from which Envoy will receive its configuration. If
  // not provided, defaults to `gloo.<ns>.svc.cluster.local`, where `<ns>` is
  // the namespace in which the Gloo Gateway control plane is installed.
  google.protobuf.StringValue address = 1;

  // Port number of xDS server from which Envoy will receive its configuration.
  // If not provided, defaults to the `grpc-xds` port number in the `gloo`
  // Service.
  google.protobuf.UInt32Value port_value = 2;
}